# rag-chatbot

./: .env.sample  .gitignore  HYBRID_SEARCH.md  MIGRATION_GUIDE.md  README.md  SCHEMA_MIGRATION.md  pyproject.toml  test_milvus.py
app/: config.py  ingestion.py  main.py  manage_collection.py  rag_chain.py  retrieval.py  spreadsheet_logger.py  vectorstore.py
notebooks/: identify_parsable_docs.ipynb  milvus.ipynb
static/: index.html
